Correction de build.gradle pour compiler une appli fonctionelle